...

    ///Update settings when user presses the back button
    private func backPressed(){
        appVM.settingsExited(didChangeWordList: viewModel.hasWordListChanged)
    }

    private var showKeyboardToggle : some View {
        Toggle(isOn: $viewModel.showKeyboard) {
            Text("Automatically show keyboard")
        }.modifier(ToggleMod())
    }

    private var showSymbolBarToggle : some View {
...
            } else {
                Text("Lowercase letters")
            }
        }.modifier(ToggleMod())
    }

    private var dictationToggle : some View {
        Toggle(isOn: $viewModel.allowDictation) {
            if viewModel.allowDictation {
                HStack {
                    Text("Keyboard layout B")
                }
            } else {
...
                               titles: Settings.darkModeTitles,
                               values: Settings.darkModeValues,
                               selection: $viewModel.darkModeOverride)

                tipsToggle
                //Set identifier for UI testing
                useUpperCaseToggle.accessibilityIdentifier("caseToggle")
                largeFontToggle
            }

            Section(header: Text("KEYBOARD"),
                    footer: Text("Use a monospaced font for the query and filter input fields")){
                showKeyboardToggle
                    .accessibilityIdentifier("showKeyboardToggle")
                showSymbolBarToggle
                    .accessibilityIdentifier("symbolBarToggle")
                dictationToggle
                    .accessibilityIdentifier("dictationToggle")

                Toggle(isOn: $viewModel.spaceToQuestionMark) {
                    Text("Convert space to ?")
                }.modifier(ToggleMod())
                .accessibilityIdentifier("convertSpaceToggle")

                Toggle(isOn: $viewModel.fullStopToQuestionMark) {
                    Text("Convert . to ?")
                }.modifier(ToggleMod())
                .accessibilityIdentifier("convertFullStopToggle")
                monospacedToggle
            }

            Section(header: Text("OTHER"),
                    footer: Text("The app will save your filters between searches, enable the setting here to automatically clear the filters")){
                searchHistoryToggle
...
        settingsForm
            .navigationTitle("Settings")
            .navigationBarTitleDisplayMode(.inline)
            .navigationBarBackButtonHidden(true)
            .toolbar {
                ToolbarIconButton(placement: .topBarLeading, iconName: "chevron.left", action: backPressed)
                ToolbarButton(placement: .topBarTrailing, label: "Reset"){
                    showDefaultSettingsAlert = true
                }
            }
            .alert("Use Default Settings", isPresented: $showDefaultSettingsAlert){
                Button("Default settings", role: .destructive){viewModel.resetToDefaultSettings()}
                    .accessibilityIdentifier("dialogResetSettings")
                Button("Cancel", role: .cancel){}
            }
    }
}

struct ToggleMod : ViewModifier {
...
