//
//  MainView.swift
//  AnagramSolver
//
//  Created by Mark Bailey on 11/03/2026.
//  Copyright © 2026 MPD Bailey Technology. All rights reserved.
//

import SwiftUI
import SwiftUtils

struct MainView: View {
    @Environment(AppViewModel.self) var appVM
    @AppStorage(Keys.showCardTips) var showCardTips: Bool = true
    @AppStorage(Keys.showSymbolBar) var showSymbolBar: Bool = false
    @AppStorage(Keys.enableSearchHistory) var showSearchHistory: Bool = true
    
    @ViewBuilder
    var body: some View {
        VStack(spacing: 0){         //Spacing 0: Remove white gap between search bar and tips
            SearchBarView(searchBarVM: appVM.searchBarVM)
            if showCardTips {
                CardTips(showSearchHistory: showSearchHistory)
            } else {
                TipsView(showSearchHistory: showSearchHistory)
                    .ignoresSafeArea()
            }
        }
        .navigationTitle("Anagram Solver")
        .navigationBarTitleDisplayMode(.inline)
        .toolbar {
            ToolbarIconButton(placement: .topBarLeading, iconName: "gear") {appVM.goto(screen: .Settings)}
            if (appVM.canSearch()){
                ToolbarButton(placement: .topBarTrailing, label: "Search"){
                    if appVM.searchBarVM.isValid() {
                        appVM.search()
                    } else {
                        appVM.searchBarVM.showValidationError = true
                    }
                }
            }
            if showSymbolBar {
                ToolbarItemGroup(placement: .keyboard) {
                    SymbolBar(searchBarVM: appVM.searchBarVM)
                }
            }
        }
        .scrollDismissesKeyboard(.immediately)
    }
}
