//
//  SettingsTests.swift
//  AnagramSolverUITests
//
//  Created by Mark Bailey on 04/03/2022.
//  Copyright © 2022 MPD Bailey Technology. All rights reserved.
//

import XCTest

class SettingsTests: XCTestCase {
    
    override func setUpWithError() throws {
        // Put setup code here. This method is called before the invocation of each test method in the class.
        
        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false
        
        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        XCUIApplication().launch()
        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
        
        let app = XCUIApplication()
        //press settings button
        app.navigationBars.buttons.element(boundBy: 0).tap()
        //press Reset button to ensure settings are in a known state
        app.navigationBars.buttons["Reset"].tap()
        //Accessibility ID can be applied to child elements, so need to use first match
        app.alerts.buttons["dialogResetSettings"].firstMatch.tap()
        
    }
    
    override func tearDownWithError() throws {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
        let app = XCUIApplication()
        //press settings button
        app.navigationBars.buttons.element(boundBy: 0).tap()
        //press Reset button to ensure settings are in a known state
        app.navigationBars.buttons["Reset"].tap()
        app.buttons["dialogResetSettings"].firstMatch.tap()
    }
    
    
    /// Tests the Letter Case setting
    /// Run on the iPod, as requires keyboard
    func testLetterCase1() throws {
        let app = XCUIApplication()
        app.switches["caseToggle"].switches.firstMatch.tap()
        //press back button
        app.navigationBars.buttons.element(boundBy: 0).tap()
        
        //Do a search
        app.textFields.element.tap()
        app.mpdbDeleteAll()
        app.mpdbUIType(msg: "MOONSTARER")
        app.navigationBars.buttons["Search"].tap()
        XCTAssertTrue(app.staticTexts["ASTRONOMER"].waitForExistence(timeout: SEARCH_TIMEOUT))
        //press back button
        app.navigationBars.buttons.element(boundBy: 0).tap()
        
    }
    
    func testConvertSpaceToQuestionMark1(){
        let app = XCUIApplication()
        app.swipeUp()
        app.switches["convertSpaceToggle"].switches.firstMatch.tap()
        //press back button
        app.navigationBars.buttons.element(boundBy: 0).tap()
        
        app.textFields.element.tap()
        app.mpdbDeleteAll()
        app.keys["o"].tap()
        app.keys["k"].tap()
        app.keys["space"].tap()
        XCTAssertEqual(app.textFields.element.value as! String, "ok?")
    }
    
    func testConvertFullStopToQuestionMark1(){
        let app = XCUIApplication()
        app.swipeUp()
        app.switches["convertFullStopToggle"].switches.firstMatch.tap()
        //press back button
        app.navigationBars.buttons.element(boundBy: 0).tap()
        
        app.textFields.element.tap()
        app.mpdbDeleteAll()
        app.keys["o"].tap()
        app.keys["k"].tap()
        app.keys["."].tap()
        XCTAssertEqual(app.textFields.element.value as! String, "ok?")
    }
    
    ///Regression Test for the Ellipsis bug
    ///When dictation keyboard is selected (.webSearch) ... is converted into …
    ///Check that the app converts the ellipsis … back to 3 dots ...
    func testAllowDictation1(){
        let app = XCUIApplication()
        app.swipeUp()
        app.switches["dictationToggle"].switches.firstMatch.tap()
        //press back button
        app.navigationBars.buttons.element(boundBy: 0).tap()

        app.textFields.element.tap()
        app.mpdbDeleteAll()
        app.keys["."].tap()
        app.keys["."].tap()
        app.keys["."].tap()
        app.keys["."].tap()
        app.keys["."].tap()
        XCTAssertEqual(app.textFields.element.value as! String, ".....")
    }

    
}
